<resources>
    <string name="app_name">RSS Feed Reader</string>
    /*-----------------------------------------------
    | add_feed_ressources.xml |
    -----------------------------------------------*/
    <string name="addFeed">Ajouter Flux...</string>
    <string name="lblTitle">Ajouter un flux RSS :</string>
    <string name="lblRssTitle">Nom du flux : </string>
    <string name="lblRssDescription">Description courte du flux :</string>
    <string name="lblRssurl">Lien du flux : </string>
    <string name="btnRssAdd">Ajouter le flux...</string>
    <string name="editTxtUrl">http://</string>

    /*-----------------------------------------------
    | activity_feed_selectorl.xml |
    -----------------------------------------------*/
    <string name="lblTitleSelector">Liste des flux :</string>
    /*-----------------------------------------------
     | modify_feed_selector.xml
    ------------------------------------------------*/
    <string name="lblTitleModify">Modifier le flux RSS : </string>
</resources>
